Main Hall: Fix bugs in shop
* Selling items wasn't removing them from the inventory
* Armors weren't proper Wearable artifacts
* Minor layout issue

--- a/client/scss/style.scss
+++ b/client/scss/style.scss
@@ -595,9 +595,9 @@ a {
 
   .artifact-tile-inner {
     border: 1px solid #b97;
-    height: 210px;
+    height: 220px;
     margin: 15px 0;
-    padding: 5%;
+    padding: 10px;
     position: relative;
     text-align: center;
     .artifact-icon img {
